@@ -11,7 +11,6 @@ import org.openrewrite.java.*;
 import org.openrewrite.java.search.UsesMethod;
 import org.openrewrite.java.search.UsesType;
 import org.openrewrite.java.tree.*;
-import org.openrewrite.marker.Markers;
 
 public class ReplaceTypedValueAPIRecipe extends Recipe {
 
@@ -56,133 +55,118 @@ public class ReplaceTypedValueAPIRecipe extends Recipe {
         check,
         new JavaVisitor<ExecutionContext>() {
 
-          private final List<ReplacementUtils.SimpleReplacementSpec>
-              simpleMethodInvocations =
-                  List.of(
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "booleanValue(Boolean bool)"
-                              "org.camunda.bpm.engine.variable.Variables booleanValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Boolean)}"),
-                          null,
-                          "java.lang.Boolean",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "booleanValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "stringValue(String string)"
-                              "org.camunda.bpm.engine.variable.Variables stringValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Boolean)}"),
-                          null,
-                          "java.lang.String",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "stringValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "integerValue(Integer integer)"
-                              "org.camunda.bpm.engine.variable.Variables integerValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Integer)}"),
-                          null,
-                          "java.lang.Integer",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "integerValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "longValue(Long long)"
-                              "org.camunda.bpm.engine.variable.Variables longValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Long)}"),
-                          null,
-                          "java.lang.Long",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "longValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "shortValue(Short short)"
-                              "org.camunda.bpm.engine.variable.Variables shortValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Short)}"),
-                          null,
-                          "java.lang.Short",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "shortValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "doubleValue(Double double)"
-                              "org.camunda.bpm.engine.variable.Variables doubleValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Double)}"),
-                          null,
-                          "java.lang.Double",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "doubleValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "floatValue(Float float)"
-                              "org.camunda.bpm.engine.variable.Variables floatValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Float)}"),
-                          null,
-                          "java.lang.Float",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "floatValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "byteArrayValue(java.lang.Byte[] bytes)"
-                              "org.camunda.bpm.engine.variable.Variables byteArrayValue(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Byte[])}"),
-                          null,
-                          "java.lang.Byte[]",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "byteArrayValue", 0)),
-                          Collections.emptyList()),
-                      new ReplacementUtils.SimpleReplacementSpec(
-                          new MethodMatcher(
-                              // "fromMap(java.util.Map map)"
-                              "org.camunda.bpm.engine.variable.Variables fromMap(..)"),
-                          RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Map)}"),
-                          null,
-                          "java.util.Map<String, Object>",
-                          ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                          List.of(
-                              new ReplacementUtils.SimpleReplacementSpec.NamedArg(
-                                  "fromMap", 0)),
-                          Collections.emptyList()));
+          private final List<ReplacementUtils.SimpleReplacementSpec> simpleMethodInvocations =
+              List.of(
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "booleanValue(Boolean bool)"
+                          "org.camunda.bpm.engine.variable.Variables booleanValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Boolean)}"),
+                      null,
+                      "java.lang.Boolean",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(
+                          new ReplacementUtils.SimpleReplacementSpec.NamedArg("booleanValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "stringValue(String string)"
+                          "org.camunda.bpm.engine.variable.Variables stringValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Boolean)}"),
+                      null,
+                      "java.lang.String",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(
+                          new ReplacementUtils.SimpleReplacementSpec.NamedArg("stringValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "integerValue(Integer integer)"
+                          "org.camunda.bpm.engine.variable.Variables integerValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Integer)}"),
+                      null,
+                      "java.lang.Integer",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(
+                          new ReplacementUtils.SimpleReplacementSpec.NamedArg("integerValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "longValue(Long long)"
+                          "org.camunda.bpm.engine.variable.Variables longValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Long)}"),
+                      null,
+                      "java.lang.Long",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("longValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "shortValue(Short short)"
+                          "org.camunda.bpm.engine.variable.Variables shortValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Short)}"),
+                      null,
+                      "java.lang.Short",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("shortValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "doubleValue(Double double)"
+                          "org.camunda.bpm.engine.variable.Variables doubleValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Double)}"),
+                      null,
+                      "java.lang.Double",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(
+                          new ReplacementUtils.SimpleReplacementSpec.NamedArg("doubleValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "floatValue(Float float)"
+                          "org.camunda.bpm.engine.variable.Variables floatValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Float)}"),
+                      null,
+                      "java.lang.Float",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("floatValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "byteArrayValue(java.lang.Byte[] bytes)"
+                          "org.camunda.bpm.engine.variable.Variables byteArrayValue(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Byte[])}"),
+                      null,
+                      "java.lang.Byte[]",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(
+                          new ReplacementUtils.SimpleReplacementSpec.NamedArg("byteArrayValue", 0)),
+                      Collections.emptyList()),
+                  new ReplacementUtils.SimpleReplacementSpec(
+                      new MethodMatcher(
+                          // "fromMap(java.util.Map map)"
+                          "org.camunda.bpm.engine.variable.Variables fromMap(..)"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any(java.lang.Map)}"),
+                      null,
+                      "java.util.Map<String, Object>",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("fromMap", 0)),
+                      Collections.emptyList()));
 
           // "org.camunda.bpm.client.task.ExternalTask getAllVariablesTyped(..)"
 
-          private final List<ReplacementUtils.BuilderReplacementSpec>
-              builderMethodInvocations =
-                  List.of(
-                      new ReplacementUtils.BuilderReplacementSpec(
-                              new MethodMatcher(
-                              "org.camunda.bpm.engine.variable.value.builder.TypedValueBuilder create()"),
-                              Set.of("objectValue"),
-                              List.of("objectValue"),
-                              RecipeUtils.createSimpleJavaTemplate("#{any()}"),
-                              null,
-                              "java.lang.Object",
-                              ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
-                              List.of(" type set to java.lang.Object")));
+          private final List<ReplacementUtils.BuilderReplacementSpec> builderMethodInvocations =
+              List.of(
+                  new ReplacementUtils.BuilderReplacementSpec(
+                      new MethodMatcher(
+                          "org.camunda.bpm.engine.variable.value.builder.TypedValueBuilder create()"),
+                      Set.of("objectValue"),
+                      List.of("objectValue"),
+                      RecipeUtils.createSimpleJavaTemplate("#{any()}"),
+                      null,
+                      "java.lang.Object",
+                      ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+                      List.of(" type set to java.lang.Object")));
 
           // join specs - possible because we don't touch the method invocations
           final List<ReplacementUtils.ReplacementSpec> commonSpecs =
@@ -193,12 +177,9 @@ public class ReplaceTypedValueAPIRecipe extends Recipe {
                           .map(spec -> (ReplacementUtils.ReplacementSpec) spec))
                   .toList();
 
-          final Map<MethodMatcher, List<ReplacementUtils.BuilderReplacementSpec>>
-              builderSpecMap =
-                  builderMethodInvocations.stream()
-                      .collect(
-                          Collectors.groupingBy(
-                                  ReplacementUtils.BuilderReplacementSpec::matcher));
+          final Map<MethodMatcher, List<ReplacementUtils.BuilderReplacementSpec>> builderSpecMap =
+              builderMethodInvocations.stream()
+                  .collect(Collectors.groupingBy(ReplacementUtils.BuilderReplacementSpec::matcher));
 
           public static String mapTypedValueToNewFqn(JavaType type) {
             if (!(type instanceof JavaType.FullyQualified fqType)) {
@@ -382,14 +363,14 @@ public class ReplaceTypedValueAPIRecipe extends Recipe {
                 declarations.getType(),
                 JavaType.ShallowClass.build("org.camunda.bpm.engine.variable.VariableMap"))) {
 
-              List<J.MethodInvocation> putValues = new ArrayList<>();
+              List<Object> putValues = new ArrayList<>();
 
               // collect information on entries directly put into the map on creation
               Expression current = firstVar.getInitializer();
               while (current instanceof J.MethodInvocation mi) {
                 if (mi.getSimpleName().equals("putValueTyped")
                     || mi.getSimpleName().equals("putValue")) {
-                  putValues.add(mi);
+                  putValues.addAll(mi.getArguments());
                 }
                 current = mi.getSelect();
               }
@@ -397,57 +378,42 @@ public class ReplaceTypedValueAPIRecipe extends Recipe {
               // Add necessary imports
               maybeAddImport("java.util.Map");
               maybeAddImport("java.util.HashMap");
+              maybeRemoveImport("org.camunda.bpm.engine.variable.VariableMap");
 
-              // collect statement to be put in the block
-              List<JRightPadded<Statement>> jRightStatements = new ArrayList<>();
-
-              J.VariableDeclarations newMapAndHashMapDecl =
-                  RecipeUtils.createSimpleJavaTemplate(
-                          "Map<String, Object> "
-                              + originalName.getSimpleName()
-                              + " = new HashMap<>();",
-                          "java.util.Map",
-                          "java.util.HashMap")
-                      .apply(getCursor(), declarations.getCoordinates().replace());
-
-              // added map as hashmap initialization to statements
-              jRightStatements.add(
-                  new JRightPadded<>(newMapAndHashMapDecl, Space.EMPTY, Markers.EMPTY));
-
-              // add each map.put() as statement
-              for (J.MethodInvocation mi : putValues) {
-                J.Identifier mapIdent =
-                    RecipeUtils.createSimpleIdentifier(
-                        originalName.getSimpleName(), "java.util.Map");
-
-                J.MethodInvocation newMethodInvoc =
-                    RecipeUtils.createSimpleJavaTemplate(
-                            "#{any(java.util.Map)}.put(#{any(String)}, #{any()});")
-                        .apply(
-                            getCursor(),
-                            declarations.getCoordinates().replace(),
-                            mapIdent,
-                            RecipeUtils.updateType(getCursor(), mi.getArguments().get(0)),
-                            RecipeUtils.updateType(getCursor(), mi.getArguments().get(1)))
-                        .withPrefix(Space.EMPTY);
-
-                jRightStatements.add(
-                    new JRightPadded<>(newMethodInvoc, Space.EMPTY, Markers.EMPTY));
+              // Dynamically build the put(...) lines using the variable name
+              StringBuilder mapPutLines = new StringBuilder();
+              for (int i = 0; i < putValues.size(); i += 2) {
+                mapPutLines.append(
+                    String.format(
+                        "%s.put(#{any(java.lang.String)}, #{any(java.lang.Object)});\n",
+                        originalName.getSimpleName()));
               }
+
+              // Inject everything into the final block
+              String blockCode =
+                  String.format(
+                      """
+                      {
+                          Map<String, Object> %s = new HashMap<>();
+                          %s
+                      }
+                      """,
+                      originalName.getSimpleName(), mapPutLines.toString().stripTrailing());
 
               // record fqn of identifier for later uses
               getCursor()
-                      .dropParentUntil(parent -> parent instanceof J.Block)
-                      .putMessage(originalName.toString(), "java.util.Map");
+                  .dropParentUntil(parent -> parent instanceof J.Block)
+                  .putMessage(originalName.toString(), "java.util.Map");
 
-              // create and return block
-              return new J.Block(
-                  Tree.randomId(),
-                  Space.EMPTY,
-                  Markers.EMPTY,
-                  new JRightPadded<>(false, Space.EMPTY, Markers.EMPTY),
-                  jRightStatements,
-                  Space.EMPTY);
+              J.Block newBlock =
+                  RecipeUtils.createSimpleJavaTemplate(
+                          blockCode, "java.util.Map", "java.util.HashMap")
+                      .apply(
+                          getCursor(),
+                          declarations.getCoordinates().replace(),
+                          putValues.toArray(new Object[0]));
+
+              return super.visit(newBlock, ctx);
             }
 
             // this replaces standalone declarations, like method parameters
@@ -592,8 +558,8 @@ public class ReplaceTypedValueAPIRecipe extends Recipe {
             }
 
             // loop through builder pattern groups
-            for (Map.Entry<MethodMatcher, List<ReplacementUtils.BuilderReplacementSpec>>
-                entry : builderSpecMap.entrySet()) {
+            for (Map.Entry<MethodMatcher, List<ReplacementUtils.BuilderReplacementSpec>> entry :
+                builderSpecMap.entrySet()) {
               MethodMatcher matcher = entry.getKey();
               if (matcher.matches(invocation)) {
                 Map<String, Expression> collectedArgs = new HashMap<>();
@@ -736,7 +702,7 @@ public class ReplaceTypedValueAPIRecipe extends Recipe {
 
             if (invocation.getSimpleName().equals("getAllVariablesTyped")) {
               J.Identifier newIdent =
-                      RecipeUtils.createSimpleIdentifier("getAllVariables", "java.lang.String");
+                  RecipeUtils.createSimpleIdentifier("getAllVariables", "java.lang.String");
               return invocation.withName(newIdent);
             }
 
